--- a/themes/jms_molla/assets/scss/demos/demo-2.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-2.scss
@@ -1,6 +1,6 @@
 /* Demo 2 Homepage 2 */
 $primary-color: #c96;
-$secondary-color: #a6c76c;
+$secondary-color: #c96;
 
 @import '../skins/skin';
 @import '../mixins/clearfix';
