--- a/themes/jms_molla/assets/css/theme.css
+++ b/themes/jms_molla/assets/css/theme.css
@@ -192,7 +192,7 @@ header .row .col-auto {
   right: 0px;
   left: 0px;
   z-index: 1000;
-  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+  box-shadow: 0 3px 6px rgba(51,51,51,0.05);
   padding:0px!important;
 }
 .header-sticky.sticky .container {
