--- a/themes/jms_molla/assets/css/theme.css
+++ b/themes/jms_molla/assets/css/theme.css
@@ -283,6 +283,7 @@ header .row .col-auto {
     overflow: hidden;
 }
 .dropdown-menu {
+  font-size: 1.3rem;
     position: absolute;
     top: 100%;
     left: 0;
@@ -297,7 +298,7 @@ header .row .col-auto {
     background-clip: padding-box;
     border: 0px;
     border-radius: 0;
-    box-shadow: 0 0 10px rgba(0,0,0,0.25);
+    box-shadow: 5px 10px 16px rgba(51,51,51,0.05),-5px 10px 16px rgba(51,51,51,0.05);
 }
 #content-wrapper .page-title {
     color: #333;
