--- a/themes/jms_molla/assets/scss/pages/_home.scss
+++ b/themes/jms_molla/assets/scss/pages/_home.scss
@@ -611,6 +611,9 @@ button:focus {
 	.btn-submit{
 		display: none;
 	}
+	.email_subscription input{
+		background-color: #f5f5f5;
+	}
 	.newsletter-button.btn-popup{
 		display: block;
 	}
