--- a/themes/jms_molla/assets/css/demo-3.css
+++ b/themes/jms_molla/assets/css/demo-3.css
@@ -557,11 +557,20 @@ a:focus {
 .btn-expandable span {
   background-color: #fcb941; }
 
-.productbox-2 .product-action .product-cart > a:hover {
+.productbox-2 .product-action .product-cart > button:hover {
   color: #fcb941; }
-  .productbox-2 .product-action .product-cart > a:hover span {
+  .productbox-2 .product-action .product-cart > button:hover span {
     -webkit-box-shadow: 0 1px 0 0 #fcb941;
     box-shadow: 0 1px 0 0 #fcb941; }
+
+.productbox-2 .content_price .price.new {
+  color: #fcb941; }
+
+.productbox-2 .out-text {
+  color: #fcb941; }
+
+.h3-product-carousel .owl-carousel .owl-nav button::before {
+  color: #fcb941; }
 
 .product-buttons .btn-icon:hover {
   background: #fcb941; }
@@ -1116,6 +1125,27 @@ a:focus {
 
 /* Fonts */
 /* font-family: 'Poppins', sans-serif; */
+.owl-dots {
+  margin-top: 2.2rem; }
+  .owl-dots button.active span {
+    border-color: #fcb941;
+    background-color: #fcb941; }
+  .owl-dots button span {
+    border-color: #fcb941; }
+    .owl-dots button span:hover {
+      border-color: #fcb941;
+      background-color: #fcb941; }
+
+.product-buttons .btn-icon:hover {
+  color: #333; }
+
+.product-buttons .btn-icon span {
+  color: #333; }
+
+.owl-dots button.active span {
+  background-color: #fcb941;
+  border-color: #primary-color; }
+
 .h3-product-carousel .product-miniature {
   border: .1rem solid #ebebeb; }
 
@@ -1125,6 +1155,41 @@ a:focus {
 .h3-product-carousel .owl-carousel.customs .owl-stage-outer {
   margin: 0;
   padding: 2rem 0; }
+
+.h3-product-carousel .owl-carousel .owl-nav button {
+  width: 30px;
+  height: calc(100% - 40px);
+  background: rgba(255, 255, 255, 0.75);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
+  .h3-product-carousel .owl-carousel .owl-nav button::after {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 100%;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    border-radius: 20px 0 0 20px;
+    background-size: contain;
+    background-repeat: no-repeat; }
+  .h3-product-carousel .owl-carousel .owl-nav button::before {
+    font-size: 2rem; }
+  .h3-product-carousel .owl-carousel .owl-nav button.disabled {
+    opacity: 0;
+    pointer-events: none;
+    cursor: default; }
+  .h3-product-carousel .owl-carousel .owl-nav button.owl-next {
+    right: 1rem; }
+    .h3-product-carousel .owl-carousel .owl-nav button.owl-next::after {
+      left: auto;
+      right: 100%;
+      background-image: url("./../images/nav-next-shadow.png"); }
+  .h3-product-carousel .owl-carousel .owl-nav button.owl-prev {
+    left: 1rem; }
+    .h3-product-carousel .owl-carousel .owl-nav button.owl-prev::after {
+      background-image: url("./../images/nav-prev-shadow.png"); }
 
 .h3-producttab .nav.nav-tabs .nav-item {
   margin: 0 1rem; }
@@ -1169,6 +1234,45 @@ a:focus {
     -o-transition: transform .3s ease;
     transition: transform .3s ease;
     transition: transform .3s ease, -webkit-transform .3s ease; }
+
+.h3-deals > .container > .row {
+  margin-left: 0;
+  margin-right: 0; }
+
+.h3-deals .h3-hotdeal {
+  padding: 0; }
+
+.h3-hotdeal .countdown {
+  display: none; }
+
+.cta-border-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  padding: 1rem; }
+  .cta-border-image.cta-border .cta-border-wrapper {
+    padding-top: 3.9rem;
+    padding-bottom: 3.9rem; }
+
+.cta-border .cta-text {
+  -webkit-box-flex: .5;
+  -ms-flex-positive: .5;
+  flex-grow: .5;
+  margin-right: 0; }
+  .cta-border .cta-text p {
+    font-size: 1.6rem;
+    letter-spacing: 0;
+    font-weight: 400; }
+
+.cta-content .btn {
+  padding: 1.1rem 3rem; }
+
+.cta-title {
+  font-weight: 600;
+  letter-spacing: -.01em; }
+  .cta-title span {
+    font-weight: 600;
+    letter-spacing: -.01em; }
 
 .intro-banners .pb-banner-text {
   display: block;
@@ -1271,5 +1375,12 @@ a:focus {
     -webkit-box-flex: 0;
     flex: 0 0 67.23%;
     max-width: 67.23%; } }
+
+@media (min-width: 992px) {
+  .cta-border .cta-heading {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 26.5%;
+    flex: 0 0 26.5%;
+    max-width: 26.5%; } }
 
 /*# sourceMappingURL=demo-3.css.map */
