--- a/themes/jms_molla/assets/scss/demos/demo-3.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-3.scss
@@ -10,6 +10,37 @@ $secondary-color: #bf913d;
 @import '../config/fonts';
 @import '../config/variables';
 
+
+.owl-dots{
+	margin-top: 2.2rem;
+	button{
+		&.active{
+			span{
+				border-color: $primary-color;
+				background-color: $primary-color;
+			}
+		}
+		span{
+			border-color: $primary-color;
+			&:hover{
+				border-color: $primary-color;
+				background-color: $primary-color;
+			}
+		}
+	}
+}
+.product-buttons .btn-icon{
+	&:hover{
+		color: #333;
+	}
+	span{
+		color: #333;
+	}
+}
+.owl-dots button.active span{
+	background-color: $primary-color;
+	border-color: #primary-color;
+}
 .h3-product-carousel{
 	.product-miniature{
 		border: .1rem solid #ebebeb;
@@ -20,6 +51,46 @@ $secondary-color: #bf913d;
 	.owl-carousel.customs .owl-stage-outer{
 		margin: 0;
 		padding: 2rem 0;
+	}
+	.owl-carousel .owl-nav button{
+		width: 30px;
+		height: calc(100% - 40px);
+		background: rgba(255,255,255,0.75);
+		transition: all 0.3s ease;
+		&::after{
+			content: '';
+			display: block;
+			width: 10px;
+			height: 100%;
+			position: absolute;
+			left: 100%;
+			top: 0;
+			border-radius: 20px 0 0 20px;
+			background-size: contain;
+			background-repeat: no-repeat;
+		}
+		&::before{
+			font-size: 2rem;
+		}
+		&.disabled{
+			opacity: 0;
+			pointer-events: none;
+			cursor: default;
+		}
+		&.owl-next{
+			right: 1rem;
+			&::after{
+				left: auto;
+				right: 100%;
+				background-image: url("./../images/nav-next-shadow.png");
+			}
+		}
+		&.owl-prev{
+			left: 1rem;
+			&::after{
+				background-image: url("./../images/nav-prev-shadow.png");
+			}
+		}
 	}
 }
 .h3-producttab{
@@ -60,6 +131,50 @@ $secondary-color: #bf913d;
 				transition: transform .3s ease;
 			}
 		}
+	}
+}
+.h3-deals{
+	> .container > .row{
+		margin-left: 0;
+		margin-right: 0;
+	}
+	.h3-hotdeal{
+		padding: 0;
+	}
+}
+.h3-hotdeal{
+	.countdown{
+		display: none;
+	}
+}
+.cta-border-image {
+	background-size: cover;
+	background-repeat: no-repeat;
+	border: none;
+	padding: 1rem;
+	&.cta-border .cta-border-wrapper {
+	    padding-top: 3.9rem;
+	    padding-bottom: 3.9rem;
+	}
+}
+.cta-border .cta-text{
+	flex-grow: .5;
+	margin-right: 0;
+	p{
+		font-size: 1.6rem;
+		letter-spacing: 0;
+		font-weight: 400;
+	}
+}
+.cta-content .btn {
+	padding: 1.1rem 3rem;
+}
+.cta-title {
+	font-weight: 600;
+	letter-spacing: -.01em;
+	span{
+		font-weight: 600;
+		letter-spacing: -.01em;
 	}
 }
 .intro-banners{
@@ -178,5 +293,11 @@ $secondary-color: #bf913d;
 		    flex: 0 0 67.23%;
 		    max-width: 67.23%;
 		}
+	}
+}
+@media (min-width: 992px){
+	.cta-border .cta-heading {
+		flex: 0 0 26.5%;
+		max-width: 26.5%;
 	}
 }
